# paper-analysis-toolkit

./: .gitignore  2.0版本prd.md  3.0版本prd.md  3.1版本prd.md  4.0版本更新说明.md  4.1版本更新说明.md  AGENTS.md  DEPLOYMENT.md  Excel导出列数据来源说明.md  MANIFEST.md  QUICKSTART.md  README.md  RELEASE.md  VERSION.md  analyze_json.py  pyproject.toml  requirements.txt  setup_github.sh  start.bat  start.sh  开始使用.md  快速推送指南.md  推送步骤.md
.github/workflows/: build-desktop-macos.yml  build-desktop-windows.yml  build-windows-package.yml
.playwright-cli/: page-2026-03-13T04-26-50-585Z.yml
code_wiki/: 01-项目架构.md  02-模块职责.md  03-关键类与函数.md  04-依赖关系.md  05-运行指南.md  06-发展方向.md  README.md
config/: config.example.yaml  config.yaml
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/electron/: feedbackManager.js  historyManager.js  main.js  preload.js
desktop/src/: App.jsx  constants.js  styles.css  utils.js
docs/: AGENTFLOW.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  CODEX_AGENT_FIRST_PLAYBOOK.md  KNOWN_GAPS.md  PIPELINE_STAGES.md  QUALITY_GATES.md  agent_harness_issues.md
packaging/windows/: PaperInsight.Windows.nuspec
paperinsight/: __init__.py  __main__.py  cli.py  desktop_bridge.py  launcher.py
paperinsight/agentflow/: __init__.py  identity.py  pipeline.py
paperinsight/cleaner/: __init__.py  section_filter.py
paperinsight/core/: __init__.py  cache.py  extractor.py  pipeline.py  reporter.py
paperinsight/llm/: __init__.py  base.py  deepseek_client.py  longcat_client.py  openai_client.py  prompt_templates.py  wenxin_client.py
paperinsight/models/: __init__.py  schemas.py  templates.py
paperinsight/ocr/: base.py  (+4 more)
scripts/: build.bat  build_executable.py  build_windows_exe.py  check_agent_harness.py  generate_desktop_assets.py  paperinsight.bat  paperinsight.sh
tests/: __init__.py  test_agent_docs.py  test_agent_harness_check.py  test_agentflow_prepare.py  test_ai_model_if_fetcher.py  test_api_integrations.py  test_cache_manager.py  test_cli_guidance.py  test_desktop_bridge.py  test_desktop_integration.js  test_impact_factor_fetcher.py  test_journal_metadata_utils.py  test_mjl_journal_resolver.py  test_prd_regression.py  test_quality_contracts.py  test_reporting_outputs.py  test_templates.py  test_terminal_utils.py  test_utils.py  test_v31_features.py
使用文档/: AI模型影响因子获取说明.md  使用示例.md  常见问题解答.md  快速开始指南.md  高级配置说明.md
脚本/: analyze_papers.py  ocr_engine.py  run.bat  run.sh
输出结果/: README.md
配置文件/: journal_impact_factors.json
(+39 files in other folders)
